--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URL = mongodb+srv://yashu:mongodb@cluster0.mjbthdn.mongodb.net/sih_web?retryWrites=true&w=majority&appName=Cluster0
-PORT = 2024;
+JWT_SECRET_KEY = ps1566;
